voting-app/manifests/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  creationTimestamp: null
  name: voting-app
spec: {}
status: {}
