voting-app/manifests/backend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: backend
  name: backend
  namespace: voting-app
spec:
  replicas: 2
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
    spec:
      containers:
        - image: cloudacademydevops/api:v3
          name: backend
          ports:
            - containerPort: 8080
          resources:
            requests:
              cpu: "10m"
              memory: "20Mi"
            limits:
              cpu: "20m"
              memory: "40Mi"
