voting-app/manifests/external-user.yaml
apiVersion: v1
kind: Pod
metadata:
  creationTimestamp: null
  labels:
    run: external-user
  name: external-user
  namespace: voting-app
spec:
  containers:
  - command:
    - sleep
    - "3600"
    image: busybox
    name: external-user
    resources: {}
  dnsPolicy: ClusterFirst
  restartPolicy: Always
status: {}
