voting-app/manifests/frontend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: null
  labels:
    app: frontend
  name: frontend
  namespace: voting-app
spec:
  replicas: 2
  selector:
    matchLabels:
      app: frontend
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: frontend
    spec:
      containers:
      - image: cloudacademydevops/frontend:v11
        name: frontend
        ports:
          - containerPort: 8080
        resources: 
          requests:
            cpu: "10m"
            memory: "20Mi"
          limits:
            cpu: "20m"
            memory: "40Mi"
