voting-app/manifests/mongo-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: mongo-service
  name: mongo-service
  namespace: voting-app
spec:
  clusterIP: None
  ports:
    - name: "27017"
      port: 27017
      protocol: TCP
      targetPort: 27017
  selector:
    app: mongo
  type: ClusterIP
